# Control_Torque_iiwa_Matlab

./: README.md
src/MatlabExamples/: Borrar.m~  LBRTorqueControlExample.m  LBRTorqueControl_ModificadoNacho.m  LBRTorqueControl_ModificadoNacho.m~  exampleHelperJointTrajectoryGeneration.m  exampleHelperLBRPlot.m  exampleHelperMwIiwa14.m
src/MatlabExamples/Dataset-Trayectories/: Input-Dataset-Trayectory1.mat  Input-Dataset-Trayectory2.mat  Input-Dataset-Trayectory3.mat  Input-Dataset-Trayectory4.mat  Input-Dataset-Trayectory5.mat  Input-Dataset-Trayectory6.mat  Input-Dataset-Trayectory7.mat  Input-Dataset-Trayectory8.mat  Input-Dataset-Trayectory9.mat
src/MatlabExamples/Extreme Learning Machine for classification and regression/: license.txt
src/MatlabExamples/Extreme Learning Machine for classification and regression/ELM_updated/: Simplefit_dataset_ELMvsBayesian.fig  example.m  example_IIWA.m  example_iiwa.m  example_iiwa.m~  example_simplefit_dataset.m  netBayesian.mat  unificar_Dataset.m
src/MatlabExamples/Extreme Learning Machine for classification and regression/ELM_updated/codes/: decode_lables.m  divide_data.m  elmPredict.m  elm_LB.asv  elm_LB.m  encode_lables.m  scaledata.m
src/MatlabExamples/Extreme Learning Machine for classification and regression/ELM_updated/html/: example.html
src/MatlabExamples/Extreme Learning Machine for classification and regression/resources/: addons_core.xml  matlab_path_entries.xml  metadata.xml
src/MatlabExamples/Resultados 202000327-ImplementandoTodavía/: .~lock.Tabla de datos.odt#  Joint1_T1_ELM.fig  Joint2_T1_ELM.fig  Joint3_T1_ELM.fig  Joint4_T1_ELM.fig  Joint5_T1_ELM.fig  Joint6_T1_ELM.fig  Joint7_T1_ELM.fig  Tabla de datos.odt
src/MatlabExamples/functions_created_by_myself/: TrayectoryGenerator_IJLDataAdquisition.m  init_sin_iiwa.m  redireccionarInicioTrayectoria.m
src/iiwa_description/launch/: iiwa14_upload.launch  iiwa7_upload.launch
src/iiwa_description/urdf/: iiwa.gazebo.xacro  iiwa14.urdf  iiwa14.urdf.xacro  iiwa14.xacro.bak
src/iiwa_gazebo/: CMakeLists.txt  package.xml
src/iiwa_gazebo/launch/: iiwa_world.launch
src/iiwa_gazebo/worlds/: iiwa.world
src/iiwa_gazebo_plugin/: CMakeLists.txt  package.xml
src/iiwa_gazebo_plugin/src/: iiwa_gazebo_plugin.cpp
